--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,10 @@ server.port=8090
 
 github.client.id=eeac7e1ec5ec246a4b90
 github.client.secret=11359404cb47fcaa3d2bceaea0afa332601b878a
-github.redirect.url=http://localhost:8090/callback 
+github.redirect.url=http://localhost:8090/callback
+
+#连接数据库
+spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
